--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,12 +5,69 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>爱奇艺商城</title>
+    <link rel="stylesheet" href="../font/iconfont.css">
     <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
     <script src="../../node_modules/requirejs/require.js" data-main="main"></script>
+    <link rel="stylesheet" href="../style/index.css">
 </head>
 
 <body>
+    <!-- 头部导航条 -->
+    <div id="tab-container">
+        <div class="container">
+            <!-- 左边部分 -->
+            <div class="top-navLeft pull-left col-md-6">
+                <span class="pull-left welcome">欢迎来到爱奇艺商城</span>
+                <div class="loginmenu pull-left center-block">
+                    <a href="javascript" class="login">请登录</a>
+                    <a href="javascript" class="reg">免费注册</a>
+                </div>
+            </div>
+            <!-- 右边部分 -->
+            <div class="top-navRight pull-right col-md-6">
+                <div class="topNav_orders pull-left">
+                    <a class="topMenuCar_link" href="javascript">
+                        <span class="iconfont icon-gouwuchekong"></span>
+                        <span class="topR_txt">购物车<i  data-elem="cartnum" class="orange">0</i>件</span>
+                    </a>
+                </div>
+                <div class="topNav_orders pull-left">
+                    <a class="myOrders_link" href="javascript">
+                        <span class="iconfont icon-wenjian"></span>
+                        <span class="topR_txt">买家中心</span>
+                    </a>
+                </div>
+                <div class="topNav_orders pull-left">
+                    <a class="myFavo_link" href="javascript">
+                        <span class="iconfont icon-wodeshoucang"></span>
+                        <span class="topR_txt">我的收藏</span>
+                    </a>
+                </div>
+                <div class="top_cutline pull-left">
+                    <a class="watch_link text-center" href="javascript">
+                        <span class="iconfont icon-saoyisao"></span>
+                        <span class="topR_txt">关注我们</span>
+                        <i class="glyphicon glyphicon-chevron-down"></i>
+                    </a>
+                </div>
+                <div class="top_cutline pull-left">
+                    <a class="bus_link text-center" href="javascript">
+                        <span class="iconfont icon-shangjia"></span>
+                        <span class="topR_txt">商家中心</span>
+                    </a>
+                </div>
+                <div class="top_cutline pull-left">
+                    <a class="index_link text-center" href="javascript">
+                        <span class="topR_txt">爱奇艺首页</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- 头部导航结束 -->
+
+    <!-- 头部开始 -->
 
 </body>
 
