--- a/src/html/cankao.html
+++ b/src/html/cankao.html
@@ -1502,6 +1502,104 @@
 
     <!--<div id="data-vip-remindbox"  data-Boss-categoryid="55" data-Boss-player="categoryPage"  style="display:none;"></div>-->
     <div id="block-AR" data-block-name="页底" class="qypage-1200">
+        <div class="mod_footer_icons_ListBox">
+            <div class="footer_icons_List">
+                <ul class="icons_list">
+                    <li class="iconbox">
+                        <div class="iconImg"><img src="//www.iqiyipic.com/common/fix/h5_qiyiShop_img/footer_redzhengLogo.png" alt="全球精选 品牌保障" width="70" height="70"></div>
+                        <div class="iconText">
+                            <p>全球精选</p>
+                            <p>品质保障</p>
+                        </div>
+                    </li>
+                    <li class="iconbox">
+                        <div class="iconImg"><img src="//www.iqiyipic.com/common/fix/h5_qiyiShop_img/footer_redmoneyLogo.png" alt="限时特卖 甄选好货" width="70" height="70"></div>
+                        <div class="iconText">
+                            <p>限时特卖</p>
+                            <p>甄选好货</p>
+                        </div>
+                    </li>
+                    <li class="iconbox">
+                        <div class="iconImg"><img src="//www.iqiyipic.com/common/fix/h5_qiyiShop_img/footer_redgoodLogo.png" alt="爱奇艺电商 口碑推荐" width="70" height="70"></div>
+                        <div class="iconText">
+                            <p>爱奇艺电商</p>
+                            <p>口碑推荐</p>
+                        </div>
+                    </li>
+                    <li class="iconbox">
+                        <div class="iconImg"><img src="//www.iqiyipic.com/common/fix/h5_qiyiShop_img/footer_redvideoLogo.png" alt="直播购物 看好就买" width="70" height="70"></div>
+                        <div class="iconText">
+                            <p>直播购物</p>
+                            <p>看好就买</p>
+                        </div>
+                    </li>
+                    <li class="iconbox">
+                        <div class="iconImg"><img src="//www.iqiyipic.com/common/fix/h5_qiyiShop_img/footer_redcollectLogo.png" alt="热剧同款 必追单品" width="70" height="70"></div>
+                        <div class="iconText">
+                            <p>热剧同款</p>
+                            <p>必追单品</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer_icons_List_second">
+                <ul class="codes_list">
+                    <li class="codeBox" style="width: 20%;">
+                        <div class="codeNarrate" style="margin-left: 102px;"><a href="//mall.iqiyi.com/kszt/shoppingGuide180723.html" class="footer_explain_first">购物指南</a><a href="//mall.iqiyi.com/kszt/shoppingGuide180723.html" class="footer_explain_other">购物流程</a><a href="//mall.iqiyi.com/kszt/shoppingGuide180723.html"
+                                class="footer_explain_other">发票制度</a><a href="//mall.iqiyi.com/kszt/shoppingGuide180723.html" class="footer_explain_other">账户管理</a></div>
+                    </li>
+                    <li class="codeBox" style="width: 20%;">
+                        <div class="codeNarrate" style="margin-left: 102px;"><a href="//mall.iqiyi.com/kszt/payment180723.html" class="footer_explain_first">支付方式</a><a href="//mall.iqiyi.com/kszt/payment180723.html" class="footer_explain_other">支付宝</a><a href="//mall.iqiyi.com/kszt/payment180723.html" class="footer_explain_other">微信</a>
+                            <a
+                                href="//mall.iqiyi.com/kszt/payment180723.html" class="footer_explain_other">银行卡</a>
+                        </div>
+                    </li>
+                    <li class="codeBox" style="width:  20%;">
+                        <div class="codeNarrate" style="margin-left: 102px;"><a href="//mall.iqiyi.com/kszt/services180723.html" class="footer_explain_first">服务保障</a><a href="//mall.iqiyi.com/kszt/services180723.html" class="footer_explain_other">发货时间</a><a href="//mall.iqiyi.com/kszt/services180723.html"
+                                class="footer_explain_other">运费说明</a><a href="//mall.iqiyi.com/kszt/services180723.html" class="footer_explain_other">退换货规则</a></div>
+                    </li>
+                    <li class="codeBox" style="width:  20%;">
+                        <div class="codeNarrate" style="margin-left: 102px;"><a href="//mall.iqiyi.com/kszt/afterSaleService180723.html" class="footer_explain_first">售后客服</a><a href="//mall.iqiyi.com/kszt/afterSaleService180723.html" class="footer_explain_other">订单查询</a><a href="//mall.iqiyi.com/kszt/afterSaleService180723.html"
+                                class="footer_explain_other">物流查询</a><a href="///mall.iqiyi.com/kszt/afterSaleService180723.html" class="footer_explain_other">客服联系</a></div>
+                    </li>
+                    <li class="codeBox" style="width:  20%;">
+                        <div class="codeNarrate" style="margin-left: 102px;"><a href="//mall.iqiyi.com/kszt/mallProtocol181217.html" class="footer_explain_first">服务协议</a><a href="//mall.iqiyi.com/kszt/mallProtocol181217.html" class="footer_explain_other">服务说明</a><a href="//mall.iqiyi.com/kszt/mallProtocol181217.html"
+                                class="footer_explain_other">使用规则</a><a href="//mall.iqiyi.com/kszt/mallProtocol181217.html" class="footer_explain_other">信息保护</a></div>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer_codes_List">
+                <ul class="codes_list">
+                    <li class="codeBox">
+                        <div class="codeImg"><img src="//www.iqiyipic.com/common/fix/h5_qiyiShop_img/iqiyi_mall_code.png" alt="爱奇艺商城手机版" width="120" height="120"></div>
+                        <div class="codeNarrate">
+                            <h1>爱奇艺商城手机版</h1>
+                            <p>爱奇艺商城-购享娱乐</p>
+                            <p>精彩在手，说有就有</p>
+                            <p>手机购物更方便</p>
+                        </div>
+                    </li>
+                    <li class="codeBox">
+                        <div class="codeImg"><img src="//www.iqiyipic.com/common/fix/h5_qiyiShop_img/iqiyi_mall_num.jpg" alt="爱奇艺商城微信" width="120" height="120"></div>
+                        <div class="codeNarrate">
+                            <h1>爱奇艺商城微信</h1>
+                            <p>关注微信</p>
+                            <p>提前了解爱奇艺商城</p>
+                            <p>最新咨询</p>
+                        </div>
+                    </li>
+                    <li class="codeBox">
+                        <div class="codeImg"><img src="//www.iqiyipic.com/common/fix/h5_qiyiShop_img/iqiyi_mall_ring.jpg" alt="爱奇艺商城微信" width="120" height="120"></div>
+                        <div class="codeNarrate">
+                            <h1>爱奇艺商城微信(订阅号)</h1>
+                            <p>关注微信订阅号</p>
+                            <p>订阅一种生活方式</p>
+                            <p>发现时尚趣味</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>'
         <div class="mod_footer_links">
             <div class="ftcont" style="padding-top:20px;" id="data-paizhao-div">
                 <ul id="data-paizhao" class="ftList clearfix">
