--- a/src/html/product.html
+++ b/src/html/product.html
@@ -139,6 +139,27 @@
 
             <!-- 搜索框部分结束 -->
 
+            <!-- 右侧广告开始 -->
+
+            <div class="headAd">
+                <div class="arrow-item">
+                    <span class="arrow-left"></span>
+                    <span class="arrow-right"></span>
+                </div>
+                <ul class="header-pro">
+
+                    <li>
+                        <a href="" target="_blank">
+                            <img src="../img/kuqi.jpg" width="50" height="50" alt="" ">
+                            <p><b title="酷奇高清VR">酷奇高清VR</b><span title="虚拟现实智能眼镜">虚拟现实智能眼镜</span></p>
+                        </a>
+                    </li>
+
+                </ul>
+            </div>
+
+            <!-- 右侧广告结束 -->
+
         </div>
     </div>
 
@@ -179,6 +200,192 @@
     </div>
 
     <!-- 导航结束 -->
+
+    <!-- 右侧工具栏 -->
+
+    <div class="detail_toolbar">
+        <div class="toolbar_top" style="height:25%"></div>
+        <ul class="toolbar_ul">
+            <li>
+                <a class="toolbar_link" target="_blank"></a>
+            </li>
+            <li class="item_car">
+                <a class="toolbar_car" href="">
+                    <i class="icon-shopping-cart"></i>
+                    <span class="toolbar_carInfo">购物车</span>
+                    <span class="toolbar_nub">0</span>
+                    <i class="toolbar_toogel"></i>
+                </a>
+            </li>
+        </ul>
+        <ul class="toolbar_backUl">
+            <li class="item_code">
+                <a class="toolbar_codeLink">
+                    <i class="toolbar_codeIcon"></i>
+                    <div class="code_box">
+                        <p class="code_title">移动下单 快速支付</p>
+                        <img class="pho_payMent_codeImg" src="../img/下载.png">
+                    </div>
+                    <i class="toolbar_toogel"></i>
+                </a>
+            </li>
+            <li>
+                <a class="toolbar_feedback" href="" target="_blank" title="反馈">
+                    <i class="toolbar_feedbackIcon"></i>
+                </a>
+            </li>
+            <li class="unEffective" alt="回顶部" title="回顶部">
+                <a class="toolbar_goTopLink" alt="回顶部" title="回顶部">
+                    <i class="toolbar_goTopIcon"></i>
+                </a>
+            </li>
+        </ul>
+
+    </div>
+
+    <!--右侧工具栏结束  -->
+
+    <!-- 主要内容上半部分开始 -->
+
+    <div id="main-top">
+        <div class="container">
+
+            <!-- 头部标题开始 -->
+
+            <div class="main-top-title">
+                <a href="">首页</a>
+                <i>></i>
+                <span>掌上游戏机400种经典怀旧FC掌上游戏迷你儿童游戏掌机</span>
+            </div>
+
+            <!-- 头部标题结束 -->
+
+            <!-- 内容开始 -->
+
+            <div class="main-top-pro">
+
+                <!-- 内容左边开始 -->
+
+                <div class="pro-left">
+
+                    <!-- 大图 -->
+
+                    <div class="pro-left-pic">
+                        <div class="image-zoom-wrap">
+                            <!-- <span data-magnifier='mark' style='width:100%; height:100%; display:inline-block; position:absolute; z-index:100; left:0px; top:0px; background:#fff; opacity:0.1;filter: alpha(opacity:10)'></span>
+                                 -->
+                            <!-- 小图放大镜 -->
+                            <img src="../img/jx01.jpg" id="J_magnifier-smallImg" alt="">
+                            <!-- <span class="image-zoom" style="display: none; top:0; left:0;"></span> -->
+                        </div>
+                    </div>
+
+                    <!-- 小图 -->
+
+                    <div class="small-pic">
+                        <ul>
+                            <li>
+                                <img src="../img/jx01.jpg" alt="" class="actived">
+                            </li>
+                            <li>
+                                <img src="../img/jx01-1.jpg" alt="">
+                            </li>
+                            <li>
+                                <img src="../img/jx01-2.jpg" alt="">
+                            </li>
+                            <li>
+                                <img src="../img/jx01-3.jpg" alt="">
+                            </li>
+                            <li>
+                                <img src="../img/jx01-4.jpg" alt="">
+                            </li>
+                        </ul>
+                    </div>
+
+
+                    <!-- 分享 -->
+
+                    <div class="share">
+                        <div class="share-btn pull-left">
+                            <i class="icon-share-goods"></i>
+                            <span class="btn_info">分享</span>
+                        </div>
+                        <a class="share-btn share-btnA pull-left" title="收藏" rseat="1501231_fav">
+                            <i class="icon-collection-goods"></i>
+                            <span class="btn_info">收藏商品 （1034人气）</span>
+                        </a>
+                    </div>
+
+
+                </div>
+
+                <!-- 内容左边结束 -->
+
+                <!-- 内容右边开始 -->
+
+                <div class="pro-right">
+
+                    <!-- 头部 -->
+                    <div class="pro-right-title">
+                        <h3 class="detail-title" title="掌上游戏机400种经典怀旧FC掌上游戏迷你儿童游戏掌机">掌上游戏机400种经典怀旧FC掌上游戏迷你儿童游戏掌机</h3>
+                    </div>
+
+                    <!-- 价格面板 -->
+
+                    <div class="detail_price">
+                        <div class="shopPromo_panel">
+                            <!-- 当前价格 -->
+                            <div class="now-price">
+                                <span class="detail_metatit" style="margin-top:10px">促&nbsp;销&nbsp;价：</span>
+                                <div class="shopTitle_info">
+                                    <div class="promo_price">
+                                        <span class="price-now">
+                                                <em class="tm-yen">¥</em>
+                                                <strong class="tm-price" id='J_new-price'>49.8</strong>
+                                            </span>
+                                        <em class="tm-promo-type"><i></i>促销价</em>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- 原价 -->
+                            <div class="original-price">
+                                <span class="detail_metatit">价&nbsp;&nbsp;&nbsp;&nbsp;格：</span>
+                                <div class="shopTitle_info">
+                                    <span class="price-old">¥<span id='J_old-price'>198</span></span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- 价格结束 -->
+
+                    <!-- 评价 -->
+                    <ul class="detail-evaluate">
+                        <li class="ind-panel-item ind-panel-Count " style="border:0">
+                            <a class="item-label" href=""></a><i></i>销量：<span>
+            1115</span></a>
+                        </li>
+                        <li class="ind-panel-item ind-panel-point ">
+                            <a class="item-label" href=""><i></i>评价：<span>
+            1057</span></a>
+                        </li>
+                    </ul>
+
+                    <!-- 评价结束 -->
+
+                </div>
+
+
+
+
+
+            </div>
+        </div>
+
+
+    </div>
+
+
 
 
 
@@ -409,6 +616,9 @@
             </div>
         </div>
     </div>
+
+
+
 
 
 </body>
