--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>爱奇艺商城</title>
     <link rel="stylesheet" href="../font/iconfont.css">
-    <script src="../../node_modules/requirejs/require.js" data-main="../js/main"></script>
+    <script src="../../node_modules/requirejs/require.js" data-main="../js/main.index.js"></script>
     <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
     <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
     <script src="../../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -215,7 +215,7 @@
 
     <!-- 头部结束 -->
 
-    <!-- 主体导航 -->
+    <!-- 主体导航开始 -->
 
     <div id="main_nav">
         <div class="container">
@@ -249,7 +249,7 @@
         </div>
     </div>
 
-    <!-- 导航结束 -->
+    <!-- 主体导航结束 -->
 
     <!-- 轮播图开始 -->
 
@@ -369,7 +369,8 @@
             <div class="sel_main">
                 <ul class="productList">
 
-                    <li>
+
+                    <!-- <li>
                         <div class="product">
                             <a class="productPic" href="" style="display:block !important;" target="_blank">
                                 <img alt="jrjxPic" src="../img/jx01.jpg" width="140" height="140" />
@@ -383,142 +384,7 @@
                                 </p>
                             </div>
                         </div>
-                    </li>
-                    <li>
-                        <div class="product">
-                            <a class="productPic" href="" style="display:block !important;" target="_blank">
-                                <img alt="jrjxPic" src="../img/jx01.jpg" width="140" height="140" />
-                            </a>
-                            <div class="productInfo">
-                                <p class="productTitle"><a href="//mall.iqiyi.com/item/19rrkjvbd8" style="display:block !important;" target="_blank">掌上游戏机双人对战</a></p>
-                                <p class="productSubTitle"><span class="productStatus"><em>经典怀旧</em></span>迷你儿童游戏掌机</p>
-                                <p class="productDesc">
-                                    <span class="productPrice">¥49.8</span>
-                                    <span class="productSale">已售 1090</span>
-                                </p>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="product">
-                            <a class="productPic" href="" style="display:block !important;" target="_blank">
-                                <img alt="jrjxPic" src="../img/jx01.jpg" width="140" height="140" />
-                            </a>
-                            <div class="productInfo">
-                                <p class="productTitle"><a href="//mall.iqiyi.com/item/19rrkjvbd8" style="display:block !important;" target="_blank">掌上游戏机双人对战</a></p>
-                                <p class="productSubTitle"><span class="productStatus"><em>经典怀旧</em></span>迷你儿童游戏掌机</p>
-                                <p class="productDesc">
-                                    <span class="productPrice">¥49.8</span>
-                                    <span class="productSale">已售 1090</span>
-                                </p>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="product">
-                            <a class="productPic" href="" style="display:block !important;" target="_blank">
-                                <img alt="jrjxPic" src="../img/jx01.jpg" width="140" height="140" />
-                            </a>
-                            <div class="productInfo">
-                                <p class="productTitle"><a href="//mall.iqiyi.com/item/19rrkjvbd8" style="display:block !important;" target="_blank">掌上游戏机双人对战</a></p>
-                                <p class="productSubTitle"><span class="productStatus"><em>经典怀旧</em></span>迷你儿童游戏掌机</p>
-                                <p class="productDesc">
-                                    <span class="productPrice">¥49.8</span>
-                                    <span class="productSale">已售 1090</span>
-                                </p>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="product">
-                            <a class="productPic" href="" style="display:block !important;" target="_blank">
-                                <img alt="jrjxPic" src="../img/jx01.jpg" width="140" height="140" />
-                            </a>
-                            <div class="productInfo">
-                                <p class="productTitle"><a href="//mall.iqiyi.com/item/19rrkjvbd8" style="display:block !important;" target="_blank">掌上游戏机双人对战</a></p>
-                                <p class="productSubTitle"><span class="productStatus"><em>经典怀旧</em></span>迷你儿童游戏掌机</p>
-                                <p class="productDesc">
-                                    <span class="productPrice">¥49.8</span>
-                                    <span class="productSale">已售 1090</span>
-                                </p>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="product">
-                            <a class="productPic" href="" style="display:block !important;" target="_blank">
-                                <img alt="jrjxPic" src="../img/jx01.jpg" width="140" height="140" />
-                            </a>
-                            <div class="productInfo">
-                                <p class="productTitle"><a href="//mall.iqiyi.com/item/19rrkjvbd8" style="display:block !important;" target="_blank">掌上游戏机双人对战</a></p>
-                                <p class="productSubTitle"><span class="productStatus"><em>经典怀旧</em></span>迷你儿童游戏掌机</p>
-                                <p class="productDesc">
-                                    <span class="productPrice">¥49.8</span>
-                                    <span class="productSale">已售 1090</span>
-                                </p>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="product">
-                            <a class="productPic" href="" style="display:block !important;" target="_blank">
-                                <img alt="jrjxPic" src="../img/jx01.jpg" width="140" height="140" />
-                            </a>
-                            <div class="productInfo">
-                                <p class="productTitle"><a href="//mall.iqiyi.com/item/19rrkjvbd8" style="display:block !important;" target="_blank">掌上游戏机双人对战</a></p>
-                                <p class="productSubTitle"><span class="productStatus"><em>经典怀旧</em></span>迷你儿童游戏掌机</p>
-                                <p class="productDesc">
-                                    <span class="productPrice">¥49.8</span>
-                                    <span class="productSale">已售 1090</span>
-                                </p>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="product">
-                            <a class="productPic" href="" style="display:block !important;" target="_blank">
-                                <img alt="jrjxPic" src="../img/jx01.jpg" width="140" height="140" />
-                            </a>
-                            <div class="productInfo">
-                                <p class="productTitle"><a href="//mall.iqiyi.com/item/19rrkjvbd8" style="display:block !important;" target="_blank">掌上游戏机双人对战</a></p>
-                                <p class="productSubTitle"><span class="productStatus"><em>经典怀旧</em></span>迷你儿童游戏掌机</p>
-                                <p class="productDesc">
-                                    <span class="productPrice">¥49.8</span>
-                                    <span class="productSale">已售 1090</span>
-                                </p>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="product">
-                            <a class="productPic" href="" style="display:block !important;" target="_blank">
-                                <img alt="jrjxPic" src="../img/jx01.jpg" width="140" height="140" />
-                            </a>
-                            <div class="productInfo">
-                                <p class="productTitle"><a href="//mall.iqiyi.com/item/19rrkjvbd8" style="display:block !important;" target="_blank">掌上游戏机双人对战</a></p>
-                                <p class="productSubTitle"><span class="productStatus"><em>经典怀旧</em></span>迷你儿童游戏掌机</p>
-                                <p class="productDesc">
-                                    <span class="productPrice">¥49.8</span>
-                                    <span class="productSale">已售 1090</span>
-                                </p>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="product">
-                            <a class="productPic" href="" style="display:block !important;" target="_blank">
-                                <img alt="jrjxPic" src="../img/jx01.jpg" width="140" height="140" />
-                            </a>
-                            <div class="productInfo">
-                                <p class="productTitle"><a href="//mall.iqiyi.com/item/19rrkjvbd8" style="display:block !important;" target="_blank">掌上游戏机双人对战</a></p>
-                                <p class="productSubTitle"><span class="productStatus"><em>经典怀旧</em></span>迷你儿童游戏掌机</p>
-                                <p class="productDesc">
-                                    <span class="productPrice">¥49.8</span>
-                                    <span class="productSale">已售 1090</span>
-                                </p>
-                            </div>
-                        </div>
-                    </li>
+                    </li> -->
 
 
 
